# databricks-connect-starter

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  create_job.sh  example_etl.py  example_query.py  pyproject.toml  spark_session.py
.claude/rules/: commands.md  conventions.md  project-structure.md
.cursor/rules/: agent-workflow.mdc  commands.mdc  databricks.mdc  environment.mdc  project-structure.mdc
dbstarter/: __init__.py  __main__.py  spark_session.py  workspace.py
examples/: example_etl.py  example_query.py  test_job.py
notebooks/: getting_started.ipynb
