[project]
name = "databricks-connect-starter"
version = "0.1.0"
description = "Minimal starter for running PySpark locally via Databricks Connect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Enrico Sagnelli" }
]

dependencies = [
    "databricks-connect>=16.1.0,<18.1",
    "databricks-sdk>=0.40.0,<1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["black>=24.0", "isort>=5.0"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0", "nbstripout>=0.9"]

[project.scripts]
dbstarter = "dbstarter.__main__:main"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
line_length = 90

[tool.setuptools.packages.find]
include = ["dbstarter*"]
